[gd_scene load_steps=6 format=3 uid="uid://oirv5go6u280"]

[ext_resource type="PackedScene" uid="uid://dgiwnxjxhak1b" path="res://player.tscn" id="1_o5mk2"]
[ext_resource type="Script" path="res://game.gd" id="1_yw57k"]
[ext_resource type="PackedScene" uid="uid://crl3fhkybobhn" path="res://tree.tscn" id="2_sbncm"]

[sub_resource type="Curve2D" id="Curve2D_vuoxa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -232, -128, 0, 0, 0, 0, 2175, -125, 0, 0, 0, 0, 2178, 1213, 0, 0, 0, 0, -237, 1213, 0, 0, 0, 0, -232, -128)
}
point_count = 5

[sub_resource type="GDScript" id="GDScript_8pyco"]
script/source = "extends CanvasLayer

func _on_button_pressed() -> void:
	
	get_tree().change_scene(\"res://game.tscn\")

"

[node name="game" type="Node2D"]
script = ExtResource("1_yw57k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -2.73177
anchor_top = -2.60926
anchor_right = 2.27135
anchor_bottom = 2.29259
offset_left = -68.0
offset_top = -46.0
offset_right = 1982.0
offset_bottom = 1119.0
color = Color(0.0923971, 0.0923971, 0.092397, 1)
metadata/_edit_use_anchors_ = true

[node name="player" parent="." instance=ExtResource("1_o5mk2")]
position = Vector2(755, 632)

[node name="Path2D" type="Path2D" parent="player"]
position = Vector2(-755, -632)
curve = SubResource("Curve2D_vuoxa")

[node name="PathFollow2D" type="PathFollow2D" parent="player/Path2D"]
unique_name_in_owner = true
position = Vector2(-232, -128)
rotation = 0.00124636

[node name="trees" type="Node" parent="."]

[node name="tree" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(1440, 388)

[node name="tree2" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(1508, 439)

[node name="tree3" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(1387, 441)

[node name="tree4" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(1442, 492)

[node name="tree5" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(287, 221)

[node name="tree6" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(193, 673)

[node name="tree7" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(1021, 402)

[node name="tree8" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(1747, 960)

[node name="tree9" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-1748, 783)

[node name="tree10" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2374, 919)

[node name="tree11" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-1854, -240)

[node name="tree12" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2117, -39)

[node name="tree13" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2167, -84)

[node name="tree14" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-1406, 1014)

[node name="tree15" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(419, 1352)

[node name="tree16" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-3097, -1773)

[node name="tree17" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-747, -1773)

[node name="tree18" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-2593, -1817)

[node name="tree19" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-4427, 834)

[node name="tree20" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-3631, -325)

[node name="tree21" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-2835, 1802)

[node name="tree22" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(3606, 1630)

[node name="tree23" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(4584, 542)

[node name="tree24" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(3606, 310)

[node name="tree25" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2215, -1968)

[node name="tree26" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2276, -2099)

[node name="tree27" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2316, -2018)

[node name="tree28" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2124, -2109)

[node name="tree29" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2055, -1971)

[node name="tree30" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2207, -2148)

[node name="tree31" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2017, -2136)

[node name="tree32" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2423, -1996)

[node name="tree33" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2448, -2161)

[node name="tree34" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2334, -2161)

[node name="tree35" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(2499, -1958)

[node name="tree36" parent="trees" instance=ExtResource("2_sbncm")]
position = Vector2(-1920, -1117)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="gameover" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = SubResource("GDScript_8pyco")

[node name="ColorRect" type="ColorRect" parent="gameover"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 7.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.458412, 0.458402, 0.45841, 0.621)

[node name="Label" type="Label" parent="gameover/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -11.5
offset_right = 55.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 156
text = "GAME OVER !"

[connection signal="health_depleted" from="player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
